@@ -17,7 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -30,23 +30,14 @@ public class SecurityConfig {
     // Các endpoint công khai
     private static final String[] PUBLIC_ENDPOINTS = {
             "/api/auth/**",
-            "/api/courses/**",  
-            "/api/progress/**",
-            "/api/courses/enroll/**" ,
-            "/api/admin/products/**"
-             // Sửa lại pattern cho endpoint enroll nếu cần
-    };
-
-    // Endpoint admin yêu cầu quyền ADMIN
-    private static final String[] ADMIN_ENDPOINTS = {
-            "/api/admin/**",
-            "/api/admin/dashboard/**"
+            "/api/categories/**"
     };
 
     // Các endpoint yêu cầu xác thực
     private static final String[] AUTHENTICATED_ENDPOINTS = {
             "/api/orders/**",
-            "/api/users/profile"
+            "/api/users/profile",
+            "/api/courses/enroll/**"
     };
 
     @Bean
@@ -58,9 +49,40 @@ public class SecurityConfig {
           .authorizeHttpRequests(authorize -> authorize
                 // Cho phép các request OPTIONS (pre-flight) từ client
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                
+                // Public endpoints không cần xác thực
                 .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
-                .requestMatchers(ADMIN_ENDPOINTS).hasAuthority("ROLE_ADMIN")
+                
+                // Các endpoints GET cho courses
+                .requestMatchers(HttpMethod.GET, "/api/courses/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/courses/enroll/**").authenticated()
+                
+                // Các endpoints GET cho chapters
+                .requestMatchers(HttpMethod.GET, "/api/chapters/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/chapters/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/chapters/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/chapters/**").hasAuthority("ADMIN")
+                
+                // Các endpoints GET cho lessons
+                .requestMatchers(HttpMethod.GET, "/api/lessons/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/lessons/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/lessons/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/lessons/**").hasAuthority("ADMIN")
+                
+                // Các endpoints cho quizzes
+                .requestMatchers(HttpMethod.GET, "/api/quizzes/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/quizzes/lesson/*/questions").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/quizzes/questions/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/quizzes/questions/**").hasAuthority("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/quizzes/submit").authenticated()
+                
+                // Endpoints admin
+                .requestMatchers("/api/admin/**").hasAuthority("ADMIN")
+                
+                // Các endpoints yêu cầu đăng nhập
                 .requestMatchers(AUTHENTICATED_ENDPOINTS).authenticated()
+                
+                // Tất cả endpoints khác yêu cầu xác thực
                 .anyRequest().authenticated()
           )
           .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
@@ -70,10 +92,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:8080"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
